sandbox/output
MockTurnNumberSequence.java:15: error: cannot find symbol
        assert(count == 1);
               ^
  symbol:   variable count
  location: class MockTurnNumberSequence
1 error
